Update getAllUsers() and getAllActiveUsers()